Added RestTemplate for Zipkin
with this change a RestTemplate is created for sending spans to Zipkin. In order to further customize RestTemplate a DZipkinRestTemplateCustomizer is created.